# company_valuation

./: Dockerfile  Institutional Valuation Models Technical Report.md  README.md  docker-compose.yml  pyproject.toml
claude/: plan.md
company-valuation/: README.md
company-valuation/.claude-plugin/: plugin.json
company-valuation/commands/: value-company.md
company-valuation/commands/value-company/: SKILL.md
company-valuation/skills/gather-analyst-estimates/: SKILL.md
company-valuation/skills/gather-financials/: SKILL.md
company-valuation/skills/gather-historical-pe/: SKILL.md
company-valuation/skills/gather-market-data/: SKILL.md
company-valuation/skills/gather-peers/: SKILL.md
company-valuation/skills/generate-report/: SKILL.md
company-valuation/skills/run-valuation/: SKILL.md
company-valuation/skills/run-valuation/scripts/: pyproject.toml
company-valuation/skills/run-valuation/scripts/company_valuation/: comps.py  precedent.py  sotp.py  wacc.py
company-valuation/skills/run-valuation/scripts/examples/: example_valuation.py
company-valuation/skills/run-valuation/scripts/tests/: test_comps.py  test_ddm.py  test_lbo.py  test_precedent.py  test_utils.py
company_valuation/: __init__.py  comps.py  dcf.py  ddm.py  lbo.py  precedent.py  sensitivity.py  utils.py
tests/: __init__.py  test_dcf.py  test_sensitivity.py  test_sotp.py  test_wacc.py
