[tool.poetry]
name = "company-valuation"
version = "0.1.0"
description = "Institutional-grade company valuation models: DCF, Comps, LBO, DDM, SOTP"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "company_valuation"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
